# my-project/app/Http/Controllers/ClientController.php
@@ -148,4 +148,50 @@ class ClientController extends Controller
         $client = DB::table('clients')->where('id', '=', $id)->delete();
         return response()->json($client);
     }
+
+    /**
+     * @OA\Get(
+     *      path="/user/client/{id}",
+     *      operationId="clientByUser",
+     *      tags={"clients"},
+     *      summary="Get a one client",
+     *      description="Returns a one client",
+     *@OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="integer"
+     *      )
+     *   ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     * @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *  )
+     */
+    public function clientByUser($id)
+    {
+        $client = DB::table('clients')->select('id', 'civility', 'firstname', 'lastname', 'birthDate', 'address', 'optionalAddress', 'zipCode', 'city', 'id_creditInfos')->where('id_users', '=', $id)->get();
+        return response()->json($client);
+    }
 }
